websiet: update description.

--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -4,16 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Download Statistics for Kenny Wang's npm Packages</title>
-  <meta name="description" content="Download statistics for my published npm packages.">
+  <meta name="description" content="NPM download statistics for Kenny Wang's opens source projects for the past year. Updated Daily.">
   <meta property="og:title" content="Download Statistics for Kenny Wang's npm Packages">
-  <meta property="og:description" content="Download statistics for my published npm packages.">
+  <meta property="og:description" content="NPM download statistics for Kenny Wang's opens source projects for the past year. Updated Daily.">
   <meta property="og:image" content="https://wangchujiang.com/my-npm-stat/og.png">
   <meta property="og:image:alt" content="Download Statistics for Kenny Wang's npm Packages">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://wangchujiang.com/my-npm-stat">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Download Statistics for Kenny Wang's npm Packages">
-  <meta name="twitter:description" content="Download statistics for my published npm packages.">
+  <meta name="twitter:description" content="NPM download statistics for Kenny Wang's opens source projects for the past year. Updated Daily.">
   <meta name="twitter:image" content="https://wangchujiang.com/my-npm-stat/og.png">
   <meta name="twitter:image:alt" content="Download Statistics for Kenny Wang's npm Packages">
   <link rel="stylesheet" href="style.css">
@@ -67,7 +67,7 @@
     </table>
     <footer>
       <div class="time">Last cache created on <time datetime="<%=NOW_DATE%>"><%=NOW_DATE%></time></div>
-      <article> Create by <a href="https://github.com/jaywcjlove" target="_blank">小弟调调™</a></article>
+      <article> Create by <a href="https://github.com/jaywcjlove" target="_blank">小弟调调™</a> All data comes directly from npm.</article>
     </footer>
   </main>
   <script src="./uPlot.iife.min.js"></script>
