website: add social preview.

--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -7,14 +7,14 @@
   <meta name="description" content="NPM download statistics for Kenny Wang's opens source projects for the past year. Updated Daily.">
   <meta property="og:title" content="Download Statistics for Kenny Wang's npm Packages">
   <meta property="og:description" content="NPM download statistics for Kenny Wang's opens source projects for the past year. Updated Daily.">
-  <meta property="og:image" content="https://wangchujiang.com/my-npm-stat/og.png">
+  <meta property="og:image" content="https://wangchujiang.com/my-npm-stat/og.jpg">
   <meta property="og:image:alt" content="Download Statistics for Kenny Wang's npm Packages">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://wangchujiang.com/my-npm-stat">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Download Statistics for Kenny Wang's npm Packages">
   <meta name="twitter:description" content="NPM download statistics for Kenny Wang's opens source projects for the past year. Updated Daily.">
-  <meta name="twitter:image" content="https://wangchujiang.com/my-npm-stat/og.png">
+  <meta name="twitter:image" content="https://wangchujiang.com/my-npm-stat/og.jpg">
   <meta name="twitter:image:alt" content="Download Statistics for Kenny Wang's npm Packages">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="./uPlot.min.css">
