website: update table.

--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -64,8 +64,7 @@
           </tr>
         <%})%>
         <tr>
-          <td></td>
-          <td><a target="_blank" href="https://www.npmjs.com/~wcjiang">...</a></td>
+          <td colspan="2"><a target="_blank" href="https://www.npmjs.com/~wcjiang">Total of <%= packages.length %> packages...</a></td>
           <td>=<a target="_blank" href="https://www.npmjs.com/~wcjiang"><%= downloads.totalDownloads.toLocaleString() %></a></td>
         </tr>
       </tbody>
